--- a/templates/index.html
+++ b/templates/index.html
@@ -13,27 +13,20 @@
     <link rel= "stylesheet" type= "text/css" href= "main.css">
 
 </head>
-<body>
-
-
-
-    <header>
-
-            
-    <h1>
-        Buziak
-    </h1>
-
+<body class="home background">
     
-        <nav>
-            <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            </ul>
+    <nav class="topnav">
+
+            <a class="home clicked" class="home"  href="index.html">Home</a>
+            <a class="projects" href="projects.html">Projects</a>
+
+        <nav class="topnav-right">
+            <a class="about" href="about.html">About me</a>
+            <a class="contact" href="contact.html">Contact</a>
         </nav>
-    </header>
+            
+            
+    </nav>
 
 </body>
 </html>
