--- a/templates/projects.html
+++ b/templates/projects.html
@@ -13,26 +13,20 @@
     <link rel= "stylesheet" type= "text/css" href= "main.css">
 
 </head>
-<body>
-
-    <header>
-
-            
-        <h1>
-            Buziak
-        </h1>
+<body class="projects background">
     
-        
-            <nav>
-                <ul>
-                <a href="index.html">Home</a>
-                <a href="projects.html">Projects</a>
-                <a href="about.html">About</a>
-                <a href="contact.html">Contact</a>
-                </ul>
-            </nav>
-    </header>
+    <nav class="topnav">
 
-    projects
+        <a class="home" href="index.html">Home</a>
+        <a class="projects clicked" class="projects" href="projects.html">Projects</a>
+
+    <nav class="topnav-right">
+        <a class="about" href="about.html">About me</a>
+        <a class="contact" href="contact.html">Contact</a>
+    </nav>
+        
+        
+</nav>
+
 </body>
 </html>
