--- a/templates/contact.html
+++ b/templates/contact.html
@@ -13,26 +13,20 @@
     <link rel= "stylesheet" type= "text/css" href= "main.css">
 
 </head>
-<body>
+<body class="contact background" >
     
-    <header>
+    <nav class="topnav">
 
-            
-        <h1>
-            Buziak
-        </h1>
-    
+        <a class="home" href="index.html">Home</a>
+        <a class="projects" href="projects.html">Projects</a>
+
+    <nav class="topnav-right">
+        <a class="about" href="about.html">About me</a>
+        <a class="contact clicked" class="contact" href="contact.html">Contact</a>
+    </nav>
         
-            <nav>
-                <ul>
-                <a href="index.html">Home</a>
-                <a href="projects.html">Projects</a>
-                <a href="about.html">About</a>
-                <a href="contact.html">Contact</a>
-                </ul>
-            </nav>
-        </header>
+        
+</nav>
 
-    contact
 </body>
 </html>
