--- a/templates/main.css
+++ b/templates/main.css
@@ -1,27 +1,84 @@
-a {
-    text-align: right;
-}
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;400;500&display=swap');
 
-header {
-    background-color: rgba(121, 83, 255, 0.651);
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 80px;
-}
-
-header * {
-    display: inline;
-}
-
-header li {
-    margin: 20px;
+body {
+    margin: 0;
+    font-family: 'Oswald', sans-serif;
     
 }
 
-header li a {
-    color: black;
+
+.topnav {
+    overflow: hidden;
+    background-color: #ECECEC;
+    position: -webkit-sticky;
+    position: sticky;
+}
+
+
+.topnav a {
+    float: left;
+    color: #070707;
+    text-align: center;
+    padding: 14px 16px;
     text-decoration: none;
+    font-size: 17px;
+}
+
+
+.topnav a.home.clicked {
+    background-color: #F78888;
+}
+
+.topnav a.projects.clicked {
+    background-color: #F3D250;
+}
+
+.topnav a.about.clicked {
+    background-color: #90CCF4;
+}
+
+.topnav a.contact.clicked {
+    background-color: #5DA2D5;
+}
+
+
+.topnav a.home:hover {
+    background-color: #F78888;
+
+}
+
+.topnav a.projects:hover {
+    background-color: #F3D250;
+    color: rgb(0, 0, 0);
+}
+
+.topnav a.about:hover {
+    background-color: #90CCF4;
+    color: rgb(0, 0, 0);
+}
+.topnav a.contact:hover {
+    background-color: #5DA2D5;
+    color: rgb(0, 0, 0);
+}
+
+
+.home.background {
+    background-color: #F78888;
+}
+
+.projects.background {
+    background-color: #F3D250;
+}
+
+.about.background {
+    background-color: #90CCF4;
+}
+
+.contact.background {
+    background-color: #5DA2D5;
+}
+
+
+.topnav-right {
     float: right;
 }
