--- a/templates/contact.html
+++ b/templates/contact.html
@@ -13,6 +13,8 @@
     <link rel= "stylesheet" type= "text/css" href= "main.css">
 
 </head>
+
+
 <body class="contact background" >
     
     <nav class="topnav">
@@ -20,13 +22,26 @@
         <a class="home" href="index.html">Home</a>
         <a class="projects" href="projects.html">Projects</a>
 
-    <nav class="topnav-right">
-        <a class="about" href="about.html">About me</a>
-        <a class="contact clicked" class="contact" href="contact.html">Contact</a>
+        <nav class="topnav-right">
+            <a class="about" href="about.html">About me</a>
+            <a class="contact clicked" class="contact" href="contact.html">Contact</a>
+        </nav>
+                    
     </nav>
-        
-        
-</nav>
+    
+    <table>
+        <tr>
+            <th>
+                <span style="color:#F78888">Contact me ;)</span>
+            </th>
+
+        </tr>
+        <tr>      
+            <th>
+            matbuziak@gmail.com
+            </th>
+        </tr>
+    </table>
 
 </body>
 </html>
