--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,8 @@
     <link rel= "stylesheet" type= "text/css" href= "main.css">
 
 </head>
+
+
 <body class="home background">
     
     <nav class="topnav">
@@ -27,6 +29,39 @@
             
             
     </nav>
+
+    <div>
+
+            <table>
+                <tr>
+                    <th class="start">
+                        ”
+                    </th>
+                    <th>
+                        Data really powers   
+                    </th>
+
+                
+                </tr>
+                <tr>
+                    <th>
+
+                    </th>                
+                    <th>
+                        <span style="color:#FED250">everything </span>  we do  
+                    </th>
+
+                </tr>
+                <tr>
+                    <th></th>
+
+                    <th class="q">
+                        — Jeff Weiner 
+                    </th>
+                </tr>
+            </table>
+
+    </div>
 
 </body>
 </html>
