--- a/templates/index.html
+++ b/templates/index.html
@@ -10,21 +10,23 @@
 
     <title>Mateusz Buziak</title>
 
-    <link rel= "stylesheet" type= "text/css" href= "main.css">
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static', filename='style/main.css') }}">
+    {% block head %}{% endblock %}
 
 </head>
 
 
 <body class="home background">
-    
+
+   
     <nav class="topnav">
 
-            <a class="home clicked" class="home"  href="index.html">Home</a>
-            <a class="projects" href="projects.html">Projects</a>
+            <a class="home clicked" class="home"  href=" {{ url_for('index') }} ">Home</a>
+            <a class="projects" href=" {{ url_for('projects') }} ">Projects</a>
 
         <nav class="topnav-right">
-            <a class="about" href="about.html">About me</a>
-            <a class="contact" href="contact.html">Contact</a>
+            <a class="about" href=" {{ url_for('about') }} ">About me</a>
+            <a class="contact" href=" {{ url_for('contact') }} ">Contact</a>
         </nav>
             
             
