--- a/templates/projects.html
+++ b/templates/projects.html
@@ -9,21 +9,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Mateusz Buziak</title>
-
-    <link rel= "stylesheet" type= "text/css" href= "main.css">
+    
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static', filename='style/main.css') }}">
 
 </head>
 <body class="projects background">
     
     <nav class="topnav">
 
-        <a class="home" href="index.html">Home</a>
-        <a class="projects clicked" class="projects" href="projects.html">Projects</a>
+        <a class="home" class="home"  href=" {{ url_for('index') }} ">Home</a>
+        <a class="projects clicked" href=" {{ url_for('projects') }} ">Projects</a>
 
     <nav class="topnav-right">
-        <a class="about" href="about.html">About me</a>
-        <a class="contact" href="contact.html">Contact</a>
+        <a class="about" href=" {{ url_for('about') }} ">About me</a>
+        <a class="contact" href=" {{ url_for('contact') }} ">Contact</a>
     </nav>
+        
+        
+</nav>
         
         
 </nav>
