--- a/templates/contact.html
+++ b/templates/contact.html
@@ -17,23 +17,29 @@
 
 <body class="contact background" >
     
+    <!-- Content -->
     <nav class="topnav">
 
         <a class="home" class="home"  href=" {{ url_for('index') }} ">Home</a>
         <a class="projects" href=" {{ url_for('projects') }} ">Projects</a>
 
+    <nav class="topnav-middle">
+    &lt;mateuszbuziak&gt;
+
+
     <nav class="topnav-right">
         <a class="about" href=" {{ url_for('about') }} ">About me</a>
         <a class="contact clicked" href=" {{ url_for('contact') }} ">Contact</a>
+
     </nav>
-        
-        
-</nav>
-    
+    </nav>
+    </nav>
+
+    <!-- Content -->
     <table>
         <tr>
             <th>
-                <span style="color:#F78888">Contact me ;)</span>
+                <span style="color:F3D250">Contact me ;)</span>
             </th>
 
         </tr>
@@ -43,6 +49,24 @@
             </th>
         </tr>
     </table>
+
+        <!-- Footer -->
+        <div style="margin-bottom:400px"></div>
+    
+
+        <footer>
+          <div>
+            <div class="topnav">
+              <div class="footer-end">
+                &lt;/mateuszbuziak&gt;
+              </div>
+              <div>
+                Copyright &copy; Mateusz Buziak 2022
+              </div>
+            </div>
+          </div>
+        </footer>
+    
 
 </body>
 </html>
