--- a/templates/content.html
+++ b/templates/content.html
@@ -15,30 +15,52 @@
 
 <body class="projects background">
     
+  <!-- Content -->
     <nav class="topnav">
 
         <a class="home" class="home"  href=" {{ url_for('index') }} ">Home</a>
-        <a class="projects clicked" href=" {{ url_for('projects') }} ">Projects</a>
+        <a class="projects" href=" {{ url_for('projects') }} ">Projects</a>
+
+    <nav class="topnav-middle">
+    &lt;mateuszbuziak&gt;
+
 
     <nav class="topnav-right">
-
         <a class="about" href=" {{ url_for('about') }} ">About me</a>
-        <a class="contact" href=" {{ url_for('contact') }} ">Contact</a>
-        
+        <a class="contact clicked" href=" {{ url_for('contact') }} ">Contact</a>
+
+    </nav>
     </nav>
     </nav>
   
     
-    <!-- Post Content -->
+    <!-- Content -->
     <article>
-        <div>
-            <div>
-                <div>
-                {{ post.content|safe }}
-                </div>
-            </div>
+
+        <div class="content">
+        {{ post.content|safe }}
         </div>
+
     </article>
+
+
+    <!-- Footer -->
+    <div style="margin-bottom:100px"></div>
+    
+
+    <footer>
+      <div>
+        <div class="topnav">
+          <div class="footer-end">
+            &lt;/mateuszbuziak&gt;
+          </div>
+          <div>
+            Copyright &copy; Mateusz Buziak 2022
+          </div>
+        </div>
+      </div>
+    </footer>
+
 
 
 </body>
