--- a/static/style/main.css
+++ b/static/style/main.css
@@ -73,6 +73,12 @@ p {
 
 }
 
+.center {
+
+    margin:0%;
+    text-align: center;
+}
+
 .content {
 
     margin-top: 0px;
@@ -99,6 +105,7 @@ p {
 
 .footer-end {
 
+    cursor: default;
     margin-top: 30px;
     margin-bottom: 30px;
     font-size: 175px;
@@ -184,6 +191,7 @@ p {
     float:none;
     text-align: center;
     font-size: 30px;
+    cursor: default;
 
 }
 
