--- a/templates/contact.html
+++ b/templates/contact.html
@@ -39,13 +39,15 @@
     <table>
         <tr>
             <th>
-                <span style="color:F3D250">Contact me ;)</span>
+                <div style="color:F3D250; text-align: center;">&#8595; contact me &#8595;</div>
             </th>
 
         </tr>
         <tr>      
             <th>
-                <a class="disabled-link" href="mailto:matbuziak@gmail.com">matbuziak@gmail.com</a>
+                <div class="center">
+                    <a class="disabled-link" href="mailto:matbuziak@gmail.com">matbuziak@gmail.com</a>
+                </div>
             </th>
         </tr>
     </table>
