--- a/templates/about.html
+++ b/templates/about.html
@@ -15,7 +15,7 @@
 </head>
 <body class="about background">
     
-  <!-- Content -->
+  <!-- Navbar -->
     <nav class="topnav">
 
         <a class="home" class="home"  href=" {{ url_for('index') }} ">Home</a>
@@ -66,17 +66,17 @@
 
         <footer>
           <div>
-            <div class="topnav">
-              <div class="footer-end">
-                &lt;/mateuszbuziak&gt;
-              </div>
               <div>
-                Copyright &copy; Mateusz Buziak 2022
+                  <div class="buz">
+                    <a href="#top">&lt;/mateuszbuziak&gt;</a>
+                  </div>
+                  <div>
+                   Copyright &copy; Mateusz Buziak 2022
+                  </div>
               </div>
-            </div>
           </div>
-        </footer>
-    
+          </footer>
+          
 
 </body>
 </html>
