--- a/templates/contact.html
+++ b/templates/contact.html
@@ -17,7 +17,7 @@
 
 <body class="contact background" >
     
-    <!-- Content -->
+    <!-- Navbar -->
     <nav class="topnav">
 
         <a class="home" class="home"  href=" {{ url_for('index') }} ">Home</a>
@@ -58,16 +58,17 @@
 
         <footer>
           <div>
-            <div class="topnav">
-              <div class="footer-end">
-                &lt;/mateuszbuziak&gt;
-              </div>
               <div>
-                Copyright &copy; Mateusz Buziak 2022
+                  <div class="buz">
+                  &lt;/mateuszbuziak&gt;
+                  </div>
+                  <div>
+                   Copyright &copy; Mateusz Buziak 2022
+                  </div>
               </div>
-            </div>
           </div>
-        </footer>
+          </footer>
+          
     
 
 </body>
