--- a/templates/index.html
+++ b/templates/index.html
@@ -16,9 +16,9 @@
 </head>
 
 
-<body class="home background">
+<body >
 
-    <!-- Content -->
+    <!-- Navbar -->
     <nav class="topnav">
 
         <a class="home clicked" class="home"  href=" {{ url_for('index') }} ">Home</a>
@@ -37,6 +37,7 @@
     </nav>
 
     <!-- Content -->
+    <header class="home background">
     <div>
 
             <table>
@@ -69,23 +70,25 @@
             </table>
 
     </div>
-
+    </header>
+    
     <!-- Footer -->
     <div style="margin-bottom:100px"></div>
     
 
     <footer>
-      <div>
-        <div class="topnav">
-          <div class="footer-end">
-            &lt;/mateuszbuziak&gt;
-          </div>
-          <div>
-            Copyright &copy; Mateusz Buziak 2022
-          </div>
+        <div>
+            <div>
+                <div class="buz">
+                &lt;/mateuszbuziak&gt;
+                </div>
+                <div>
+                 Copyright &copy; Mateusz Buziak 2022
+                </div>
+            </div>
         </div>
-      </div>
-    </footer>
+        </footer>
+        
 
 
 </body>
