--- a/templates/projects.html
+++ b/templates/projects.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="en" id="top">
 
 <head>
 
@@ -14,9 +14,9 @@
 
 </head>
 
-<body class="projects background">
+<body>
     
-  <!-- Content -->
+  <!-- Navbar -->
     <nav class="topnav">
 
         <a class="home" class="home"  href=" {{ url_for('index') }} ">Home</a>
@@ -35,6 +35,7 @@
     </nav>
 
     <!-- Content -->
+    <header class="projects background">
     <div>
         <div\>
           <div>
@@ -57,26 +58,27 @@
         </div>
       </div>
 
+    </header>
+
     <!-- Footer -->
-    <div style="margin-bottom:100px"></div>
     
 
     <footer>
       <div>
-        <div class="topnav">
-          <div class="footer-end">
-            &lt;/mateuszbuziak&gt;
-          </div>
           <div>
-            Copyright &copy; Mateusz Buziak 2022
+              <div class="buz">
+              <a href="#top">&lt;/mateuszbuziak&gt;</a>
+              </div>
+              <div>
+               Copyright &copy; Mateusz Buziak 2022
+              </div>
           </div>
-        </div>
       </div>
     </footer>
+      
+  
+  
 
-  
-  
-    </body>
 
 </body>
 </html>
